More tests. Fix linting

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,11 @@
 {
-  "extends": "mourner"
+  "parserOptions": {
+    "sourceType": "module"
+  },
+  "extends": "mourner",
+  "rules": {
+    "indent": ["error", 2],
+    "semi": ["error", "never"],
+    "no-lonely-if": "off"
+  }
 }
