--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "kwc-lineclip",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Polyline clipping based on the algorithm by Kodituwakka, Wijeweera & Chamikara.",
   "main": "dist/kwc-lineclip.js",
   "module": "src/index.js",
   "scripts": {
     "bench": "npm run build && node benchmark.js",
-    "build": "rollup src/index.js --o dist/kwc-lineclip.js --f cjs",
+    "build": "rollup src/index.js --o dist/kwc-lineclip.js --f umd --n kwc",
     "test-memory": "node memoryCheck2.js && node memoryCheck1.js",
     "test": "npm run build && node test/test.js"
   },
